tests/baselines/reference/decoratorOnClassMethodOverload1.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethodOverload1.ts(4,5): error TS1249: A decorator can only decorate a method implementation, not an overload.
tests/cases/conformance/decorators/class/method/decoratorOnClassMethodOverload1.ts(10,5): error TS1249: A decorator can only decorate a method implementation, not an overload.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethodOverload1.ts (2 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        @dec
        ~
!!! error TS1249: A decorator can only decorate a method implementation, not an overload.
        method()
        method() { }
    }
    
    const C1 = class {
        @dec
        ~
!!! error TS1249: A decorator can only decorate a method implementation, not an overload.
        method()
        method() { }
    }
    